# wav_rust

./: Cargo.toml
src/: main.rs  sound.rs  wave.rs
